--- a/PlanIt/Views/WindowView.axaml
+++ b/PlanIt/Views/WindowView.axaml
@@ -21,16 +21,16 @@
     
         <Border Padding="8" HorizontalAlignment="Stretch">
             <Grid>
-                <TextBlock Padding="6" Classes="t-b t-20" Foreground="{DynamicResource TaskSecondaryText}" VerticalAlignment="Center" HorizontalAlignment="Center" IsVisible="{Binding ViewRepository.SelectedCategory, Converter={x:Static ObjectConverters.IsNull}}">Choose Category</TextBlock>
-                <Border Padding="6" x:Name="Panel" VerticalAlignment="Center" HorizontalAlignment="Center" IsVisible="{Binding ViewRepository.SelectedCategory, Converter={x:Static ObjectConverters.IsNotNull}}">
+                <TextBlock Padding="6" Classes="t-b t-20" Foreground="{DynamicResource TaskSecondaryText}" VerticalAlignment="Center" HorizontalAlignment="Center" IsVisible="{Binding ViewController.SelectedCategory, Converter={x:Static ObjectConverters.IsNull}}">Choose Category</TextBlock>
+                <Border Padding="6" x:Name="Panel" VerticalAlignment="Center" HorizontalAlignment="Center" IsVisible="{Binding ViewController.SelectedCategory, Converter={x:Static ObjectConverters.IsNotNull}}">
                     <StackPanel Orientation="Horizontal" Spacing="7" VerticalAlignment="Center">
                         <Grid VerticalAlignment="Center">
-                            <Ellipse Width="30" Height="30" Fill="{Binding ViewRepository.SelectedCategory.Color, Converter={StaticResource ResourceLookupConverter}, FallbackValue=Default}"></Ellipse>
-                            <PathIcon Width="14" Height="14" Data="{Binding ViewRepository.SelectedCategory.Icon, Converter={StaticResource ResourceLookupConverter}, FallbackValue=CubesIcon}" Foreground="{DynamicResource Text}"></PathIcon>
+                            <Ellipse Width="30" Height="30" Fill="{Binding ViewController.SelectedCategory.Color, Converter={StaticResource ResourceLookupConverter}, FallbackValue=Default}"></Ellipse>
+                            <PathIcon Width="14" Height="14" Data="{Binding ViewController.SelectedCategory.Icon, Converter={StaticResource ResourceLookupConverter}, FallbackValue=CubesIcon}" Foreground="{DynamicResource Text}"></PathIcon>
                         </Grid>
-                        <TextBlock Classes="t-m t-20" VerticalAlignment="Center" Text="{Binding ViewRepository.SelectedCategory.Title, FallbackValue=NoTitle}"></TextBlock>
+                        <TextBlock Classes="t-m t-20" VerticalAlignment="Center" Text="{Binding ViewController.SelectedCategory.Title, FallbackValue=NoTitle}"></TextBlock>
                         <Rectangle Width="1" VerticalAlignment="Stretch" Fill="{DynamicResource PanelDivider}"></Rectangle>
-                        <Button VerticalAlignment="Center" Classes="btn" Width="30" Height="30" Margin="6 0 0 0" Command="{Binding ShowTaskOverlay}">
+                        <Button VerticalAlignment="Center" Classes="btn" Width="30" Height="30" Margin="6 0 0 0" Command="{Binding AddNewTask}">
                            <PathIcon Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource Text}"></PathIcon>
                         </Button>
                     </StackPanel>
@@ -40,7 +40,7 @@
     
         <Border Grid.Row="1" Padding="17 0">
             <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" AllowAutoHide="False" Classes="mainScroll">
-                <ItemsControl x:Name="TasksItemsControl" ItemsSource="{Binding ViewRepository.TasksCollection}">
+                <ItemsControl x:Name="TasksItemsControl" ItemsSource="{Binding ViewController.TasksCollection}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate DataType="models:TaskItem">
                             <Border Classes="task">
@@ -50,10 +50,10 @@
                                     <TextBlock Grid.Column="2" VerticalAlignment="Center" Classes="t-16 second" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToDateConverter}}"></TextBlock>
                                     <TextBlock Grid.Column="3" VerticalAlignment="Center" Classes="t-16 second" Margin="6 0">/</TextBlock>
                                     <TextBlock Grid.Column="4" VerticalAlignment="Center" Classes="t-16 second" Margin="0 0 16 0" Text="{Binding CompleteDate, Converter={StaticResource DateTimeToTimeConverter}}"></TextBlock>
-                                    <Button Grid.Column="5" Width="24" Height="24" Classes="taskBtn" Command="{Binding DataContext.EditTask, ElementName=WindowUserControl}" CommandParameter="{Binding}">
+                                    <Button Grid.Column="5" Width="24" Height="24" Classes="taskBtn" Command="{Binding DataContext.TaskManagerVM.EditTask, ElementName=WindowUserControl}" CommandParameter="{Binding}">
                                         <PathIcon Width="20" Height="20" Data="{StaticResource EditIcon}" Foreground="{DynamicResource TaskSecondaryText}"></PathIcon>
                                     </Button>
-                                    <Button Grid.Column="6" Width="24" Height="24" Classes="taskBtn" Command="{Binding Path=DataContext.RemoveTask, ElementName=WindowUserControl}" CommandParameter="{Binding }">
+                                    <Button Grid.Column="6" Width="24" Height="24" Classes="taskBtn" Command="{Binding Path=DataContext.TaskManagerVM.RemoveTask, ElementName=WindowUserControl}" CommandParameter="{Binding }">
                                         <PathIcon Width="20" Height="20" Data="{StaticResource TrashIcon}" Foreground="{DynamicResource TaskTrash}"></PathIcon>
                                     </Button>
                                 </Grid>
